--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "estraverse-fb": "^1.3.1",
     "flow-bin": "^0.23.1",
     "flow-status-webpack-plugin": "^0.1.4",
+    "html-webpack-plugin": "^2.16.0",
     "redbox-react": "^1.2.3",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
