--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "eslint": "^2.8.0",
+    "eslint-config-airbnb": "^8.0.0",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-flowtype": "^2.2.7",
+    "eslint-plugin-import": "^1.6.0",
+    "eslint-plugin-jsx-a11y": "^1.0.3",
     "eslint-plugin-react": "^5.0.1",
     "estraverse-fb": "^1.3.1",
     "flow-bin": "^0.23.1",
@@ -43,8 +47,6 @@
     "babel-polyfill": "^6.7.4",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "seamless-immutable": "^6.0.1"
+    "react-router": "^2.3.0"
   }
 }
