--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
+    "build": "rm -fr dist && webpack",
     "flow": "flow; [[ $?=0||$?=2 ]]",
     "lint": "eslint src",
     "start": "webpack-dev-server --hot --inline",
@@ -28,6 +28,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
+    "copy-webpack-plugin": "^2.1.3",
     "eslint": "^2.8.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-loader": "^1.3.0",
