--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src",
     "start": "webpack-dev-server --hot --inline",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "update-gh-pages": "git push origin `git subtree split --prefix dist master`:gh-pages --force"
+    "update-gh-pages": "git push origin `git subtree split --prefix dist master`:gh-pages"
   },
   "repository": {
     "type": "git",
