--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,3 +1,8 @@
 {
-"extends": "airbnb"
+"parser": "babel-eslint",
+"extends": "airbnb",
+"ecmaFeatures": {
+        "classes": true,
+        "jsx": true
+    },
 }
