--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rm -fr dist && webpack",
+    "build": "rm -fr dist && webpack --config webpack.config.dist.js",
     "flow": "flow; [[ $?=0||$?=2 ]]",
     "lint": "eslint src",
     "start": "webpack-dev-server --hot --inline",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose --watch",
+    "test-cover": "jest --verbose --coverage",
     "update-gh-pages": "git push origin `git subtree split --prefix dist master`:gh-pages"
   },
   "repository": {
@@ -21,10 +22,19 @@
     "url": "https://github.com/jamielesouef/jpr.mobi/issues"
   },
   "homepage": "https://github.com/jamielesouef/jpr.mobi#readme",
+  "jest": {
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils"
+    ]
+  },
   "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.4",
+    "babel-jest": "^11.0.2",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
@@ -40,6 +50,9 @@
     "flow-bin": "^0.23.1",
     "flow-status-webpack-plugin": "^0.1.4",
     "html-webpack-plugin": "^2.16.0",
+    "jest-cli": "^11.0.2",
+    "react-addons-test-utils": "^15.0.1",
+    "react-element-to-jsx-string": "^2.6.1",
     "redbox-react": "^1.2.3",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
